--- a/src/containers/header/Header.css
+++ b/src/containers/header/Header.css
@@ -87,7 +87,7 @@
   margin: 0 0 0 1rem;
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 20px;
   color: #fff;
   text-align: center;
@@ -102,7 +102,6 @@
 
 .gpt3__header-image img {
   width: 100%;
-  /* height: 100%; */
 }
 
 @media (max-width: 1440px) {
@@ -126,7 +125,7 @@
     font-size: 48px;
     line-height: 60px;
   }
-  .gpt3__header p {
+  .gpt3__header-content > p {
     font-size: 16px;
     line-height: 24px;
   }
@@ -136,7 +135,8 @@
   }
 
   .gpt3__header-content__people p {
-    margin: 0;
+    margin: 1rem 0 0 0;
+    font-size: 12px;
   }
 
   .gpt3__header-content__input input,
@@ -151,7 +151,7 @@
     font-size: 36px;
     line-height: 48px;
   }
-  .gpt3__header p {
+  .gpt3__header-content > p {
     font-size: 14px;
     line-height: 24px;
   }
