--- a/src/containers/whatGPT3/WhatGPT3.css
+++ b/src/containers/whatGPT3/WhatGPT3.css
@@ -105,7 +105,8 @@
     flex-direction: column;
   }
 
-  .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
+  .gpt3__whatgpt3-feature .gpt3__features-container__feature-text,
+  .gpt3__whatgpt3-container .gpt3__features-container__feature-text {
     margin-top: 0.5rem;
   }
 
