--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: var(--font-family);
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
@@ -14,6 +15,12 @@ body {
 a {
   color: unset;
   text-decoration: none;
+}
+
+input:focus,
+input:active {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  border-bottom-style: dashed;
 }
 
 .gradient__bg {
