--- a/src/components/article/Article.css
+++ b/src/components/article/Article.css
@@ -17,6 +17,7 @@
 .gpt3__blog-container_article-image img {
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 .gpt3__blog-container_article-content {
@@ -27,7 +28,6 @@
   height: 100%;
 }
 .gpt3__blog-container_article-content p {
-  font-family: var(--font-family);
   font-weight: bold;
   font-size: 11.649px;
   line-height: 35px;
@@ -35,7 +35,6 @@
 }
 .gpt3__blog-container_article-content_title,
 .gpt3__blog-container_article-content_title.featured {
-  font-family: var(--font-family);
   font-weight: 800;
   line-height: 30px;
   margin-bottom: 5rem;
@@ -50,6 +49,9 @@
   font-size: 25.11px;
 }
 .gpt3__blog-container_article-content p:last-child {
+  font-size: 14px;
+  padding-left: 1rem;
+  text-decoration: underline;
   cursor: pointer;
 }
 
