--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -36,7 +36,6 @@
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
   color: #fff;
-  font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
   line-height: 25px;
@@ -50,7 +49,6 @@
   color: #fff;
   padding: 0.5rem 1rem;
   background: #ff4820;
-  font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
   line-height: 25px;
@@ -61,7 +59,7 @@
 }
 
 .gpt3__navbar-menu {
-  margin-left: 1rem;
+  margin-left: 2rem;
   display: none;
   position: relative;
 }
@@ -125,5 +123,15 @@
 
   .gpt3__navbar-menu_container-links-sign {
     display: block;
+  }
+
+  .gpt3__navbar-menu_container-links-sign::before {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 100%;
+    border-radius: 2px;
+    background: white;
+    background-color: white;
   }
 }
