--- a/src/containers/features/Features.css
+++ b/src/containers/features/Features.css
@@ -17,19 +17,18 @@
 }
 
 .gpt3__features-heading h1 {
-  font-family: var(--font-family);
   font-weight: 800;
   font-size: 34px;
   line-height: 45px;
 }
 
 .gpt3__features-heading p {
-  font-family: var(--font-family);
   font-weight: 500;
   font-size: 16px;
   line-height: 30px;
   color: #ff8a71;
   margin-top: 2rem;
+  cursor: pointer;
 }
 
 .gpt3__features-container {
