--- a/src/containers/header/Header.css
+++ b/src/containers/header/Header.css
@@ -13,7 +13,6 @@
 }
 
 .gpt3__header-content h1 {
-  font-family: var(--font-family);
   font-weight: 800;
   font-size: 62px;
   line-height: 75px;
@@ -21,7 +20,6 @@
 }
 
 .gpt3__header-content p {
-  font-family: var(--font-family);
   font-weight: normal;
   font-size: 20px;
   line-height: 27px;
@@ -33,6 +31,9 @@
   width: 100%;
   margin: 2rem 0 1rem;
   display: flex;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  overflow: hidden;
 }
 
 .gpt3__header-content__input input {
@@ -44,11 +45,8 @@
   padding: 0 1rem;
   outline: none;
   color: #fff;
-  font-family: var(--font-family);
   font-size: 20px;
   line-height: 27px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
 
 .gpt3__header-content__input button {
@@ -57,9 +55,6 @@
   min-width: max-content;
   min-height: 50px;
   background: #ff4820;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  font-family: var(--font-family);
   font-weight: bold;
   font-size: 20px;
   line-height: 27px;
@@ -85,7 +80,6 @@
 
 .gpt3__header-content__people p {
   margin: 0 0 0 1rem;
-  font-family: var(--font-family);
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
