--- a/src/containers/possibility/Possibility.css
+++ b/src/containers/possibility/Possibility.css
@@ -24,24 +24,22 @@
 }
 
 .gpt3__possibility-content h4 {
-  font-family: var(--font-family);
   font-weight: 500;
   font-size: 16px;
   line-height: 30px;
   color: #71e5ff;
+  cursor: pointer;
 }
 .gpt3__possibility-content h4:last-child {
   color: #ff8a71;
 }
 .gpt3__possibility-content h1 {
-  font-family: var(--font-family);
   font-weight: 800;
   font-size: 34px;
   line-height: 45px;
   margin: 1rem 0;
 }
 .gpt3__possibility-content p {
-  font-family: var(--font-family);
   font-size: 16px;
   line-height: 30px;
   color: var(--color-text);
